--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ http://www.tooplate.com/view/2076-zentro
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">ZENTRO</a>
+			<a href="#" class="navbar-brand">M~~M~~T</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#gallery" class="smoothScroll">FOOD GALLERY</a></li>
-				<li><a href="#menu" class="smoothScroll">SPECIAL MENU</a></li>
-				<li><a href="#team" class="smoothScroll">CHEFS</a></li>
+				<li><a href="#gallery" class="smoothScroll">GALLERY</a></li>
+				<li><a href="#menu" class="smoothScroll">MENU</a></li>
+				<li><a href="#team" class="smoothScroll">ABOUT MARIA</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 			</ul>
 		</div>
@@ -59,9 +59,9 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1>ZENTRO RESTAURANT</h1>
-				<h2>CLEAN &amp; SIMPLE DESIGN</h2>
-				<a href="#gallery" class="smoothScroll btn btn-default">LEARN MORE</a>
+				<h1>Maria's Massage Therapy'</h1>
+				<h2>Relaxing &amp; Rejuvenating Massages</h2>
+				<a href="#gallery" class="smoothScroll btn btn-default">Enter</a>
 			</div>
 		</div>
 	</div>		
@@ -162,7 +162,7 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
-				<h1 class="heading">Meet Zentro chefs</h1>
+				<h1 class="heading">Meet Maria Velasques</h1>
 				<hr>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -256,8 +256,8 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h3>ZENTRO</h3>
-				<p>Copyright © Zentro Restaurant and Cafe 
+				<h3>MMT</h3>
+				<p>Copyright © Maria Massage Therapy 
                 
                 | Design: <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
 			</div>
