--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1>Maria's Massage Therapy'</h1>
+				<h1>Maria's Massage Therapy</h1>
 				<h2>Relaxing &amp; Rejuvenating Massages</h2>
 				<a href="#gallery" class="smoothScroll btn btn-default">Enter</a>
 			</div>
