--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 col-sm-12 text-center">
-				<h1 class="heading">Contact Us</h1>
+				<h1 class="heading"><a href="suggest.php">Contact Us</a></h1>
 				<hr>
 			</div>
 			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
