take message submission to thank you page

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@ http://www.tooplate.com/view/2076-zentro
 	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 col-sm-12 text-center">
-				<h1 class="heading"><a href="suggest.php">Contact Us</a></h1>
+				<h1 class="heading">Contact Us</a></h1>
 				<hr>
 			</div>
 			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
-				<form action="#" method="post" action = "index.html">
+				<form action="#" method="post" action = "message_received.php">
 					<div class="col-md-6 col-sm-6">
 						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
 				  </div>
@@ -205,7 +205,9 @@ http://www.tooplate.com/view/2076-zentro
 						<textarea name="message" rows="8" class="form-control" id="message" placeholder="Message"></textarea>
 					</div>
 					<div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
-						<input name="submit" type="submit" class="form-control" id="submit" value="make a reservation">
+						<a href = "message_received.php">
+							<input name="submit" type="submit" class="form-control" id="submit" value="make a reservation">
+							</a>
 					</div>
 				</form>
 			</div>
