take message submission to thank you page

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ http://www.tooplate.com/view/2076-zentro
 				<hr>
 			</div>
 			<div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeIn" data-wow-delay="0.9s">
-				<form action="#" method="post" action = "message_received.php">
+				<form action="message_received.php" method="post">
 					<div class="col-md-6 col-sm-6">
 						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
 				  </div>
